# leaf-desease-predictor

./: .gitignore  Dockerfile  README.md  config.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build_push_docker.yml  run_tests.yml
leaf_desease_predictor/: app.py  cli.py
