[tool.poetry]
name = "leaf-desease-predictor"
version = "1.0.0"
description = "Bridge for calculation leaf wetness characteristics"
authors = ["Maks <approximatenumber@gmail.com>"]
packages = [{include = "leaf_desease_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = "^1.36.1"
pyyaml = "^6.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
leaf-desease-predictor = "leaf_desease_predictor.cli:cli"

[build-system]
requires = ["poetry-core==1.4.2"]
build-backend = "poetry.core.masonry.api"
